--- a/build.gradle
+++ b/build.gradle
@@ -56,8 +56,8 @@ jar {
 dependencies {
     api platform('com.exactpro.th2:bom:4.1.0')
 
-    implementation 'com.exactpro.th2:common:3.44.0'
-    implementation 'com.exactpro.th2:codec:4.7.5'
+    implementation 'com.exactpro.th2:common:5.1.0-dev-version-5+'
+    implementation 'com.exactpro.th2:codec:5.0.0-dev-version-5+'
 
     implementation 'org.slf4j:slf4j-api'
     compileOnly 'com.google.auto.service:auto-service:1.0.1'
