--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.palantir.docker' version '0.25.0'
     id 'org.jetbrains.kotlin.jvm' version "${kotlin_version}"
     id 'application'
+    id 'org.jetbrains.kotlin.kapt' version "${kotlin_version}"
 }
 
 group = 'com.exactpro.th2'
@@ -60,8 +61,10 @@ dependencies {
     implementation 'com.exactpro.th2:codec:4.7.5'
 
     implementation 'org.slf4j:slf4j-api'
+
     compileOnly 'com.google.auto.service:auto-service:1.0.1'
     annotationProcessor 'com.google.auto.service:auto-service:1.0.1'
+    kapt 'com.google.auto.service:auto-service:1.0.1'
 
     implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: kotlin_version
     implementation group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: kotlin_version
